--- a/frontend/html/map.html
+++ b/frontend/html/map.html
@@ -1,6 +1,7 @@
 <html>
 
 	<head>
+		<meta name="viewport" content="width=device-width, intial-scale=1.0">
 		<title>Add Map</title>
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
@@ -10,9 +11,27 @@
 	</head>
 
 	<body>
-		<h3>My Google Maps Demo</h3>
 		<!--The div element for the map -->
-		<div id="map"></div>
+		<div id="instruction">
+			<h5>Choose Starting Point</h5>
+		</div>
+		
+		<div id="map">
+			
+		</div>
+
+		<div id="containerShowRoute">
+			<button>
+				<div id="route_img"></div>
+			</button>
+		</div>
+
+		<div id="btnStartTrip">
+			<button>
+				START TRIP
+
+			</button>
+		</div>
 
 		<!-- 
 	The `defer` attribute causes the callback to execute after the full HTML
@@ -20,6 +39,7 @@
 	and consistent behavior across browsers, consider loading using Promises
 	with https://www.npmjs.com/package/@googlemaps/js-api-loader.
 	-->
+		<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 		<script type="module" src="../js/map.js"></script>
 		<script
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsG7ARwUwAiTNs8_AQszdR4mbCLr5kjHc&callback=initMap&v=weekly"
