--- a/frontend/html/map.html
+++ b/frontend/html/map.html
@@ -26,9 +26,21 @@
 			</button>
 		</div>
 
+		<div id="distanceContainer">
+			<label for="maxDistanceInp">Distance From Route</label>
+			<input type="number" value="10" min="10" max="100" name="maximum-distance" id="maxDistanceInp"><span>Meter</span>
+		</div>
+
 		<div id="btnStartTrip">
 			<button>
 				START TRIP
+
+			</button>
+		</div>
+
+		<div id="btnArrived">
+			<button>
+				ARRIVED
 
 			</button>
 		</div>
