--- a/frontend/html/map.html
+++ b/frontend/html/map.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width, intial-scale=1.0">
 		<title>Add Map</title>
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+		<link rel="manifest" href="../manifest.json">
 
 		<!-- <link rel="stylesheet" type="text/css" href="./style.css" /> -->
 		<link rel="stylesheet" href="../css/map.css" type="text/css">
