--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
         <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#317EFB">
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="css/index.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
