--- a/frontend/add-contact.html
+++ b/frontend/add-contact.html
@@ -17,7 +17,7 @@
 
         <div class="grid-item grid-item-1">
             <div class="settings-img">
-                <a href="home-phrase.html"><img src="images/home.png" alt="contacts"></a>
+                <a href="modes.html"><img src="images/home.png" alt="contacts"></a>
             </div>
         </div>
         <div class="grid-item grid-item-2">
