--- a/frontend/home-phrase.html
+++ b/frontend/home-phrase.html
@@ -17,15 +17,13 @@
 
         <div class="grid-item grid-item-1">
             <div class="settings-img">
-                <a href="settings.html">
-                    <img href="settings.html" src="images/settings.png" alt="settings">
+                <a href="modes.html">
+                    <img href="modes.html" src="images/home.png" alt="settings">
                 </a>
             </div>
 
             <div class="contacts-img">
-                <a href="contact-created.html">
-                    <img src="images/contact.png" alt="contacts">
-                </a>
+                
             </div>
         </div>
 
