--- a/frontend/modes.html
+++ b/frontend/modes.html
@@ -18,19 +18,19 @@
         <div class="grid-item grid-item-1">
             <div class="settings-img">
                 <a href="settings.html">
-                    <img href="settings.html" src="images/return.png" alt="settings">
+                    <img href="settings.html" src="images/settings.png" alt="settings">
                 </a>
             </div>
             <div class="home-img">
-                <a href="home-phrase.html">
-                    <img src="images/home.png" alt="contacts">
+                <a href="contact-created.html">
+                    <img src="images/contact.png" alt="contacts">
                 </a>
             </div>
         </div>
         <div class="grid-item grid-item-2">
 
             <div class="top-text">
-                <span>Modes</span>
+                <span>CHOOSE A MODE</span>
             </div>
             <div class="modes-section">
                 <div class="mode-1">
