--- a/frontend/contact-created.html
+++ b/frontend/contact-created.html
@@ -17,7 +17,7 @@
 
         <div class="grid-item grid-item-1">
             <div class="settings-img">
-                <a href="home-phrase.html">
+                <a href="modes.html">
                     <img src="images/home.png" alt="contacts">
                 </a>
             </div>
