fixed route clear bug, cache

--- a/frontend/html/sos.html
+++ b/frontend/html/sos.html
@@ -32,7 +32,8 @@
             </div>
             
         </div>
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
         <script src="../js/index.js" type="text/javascript"></script>
-        <script src="../js/sos.js" type="text/javascript"></script>
+        <script type="module" src="../js/sos.js"></script>
     </body>
 </html>
